--- a/index.html
+++ b/index.html
@@ -190,7 +190,19 @@
         </div>
     </section>
 
-
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Sangam Kunar. All rights reserved. | Designed by Sangam Kunwar</p>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skill">Skills</a></li>
+                    <li><a href="#services">Services</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 
 
 
