--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         </nav>
     </header>
-    <section class="home">
+    <section class="home" id="home">
 
         <div class="home-content">
             <h3>Hello ,It's Me</h3>
